[package]
name = "edhex_core"
version = "0.2.1"
authors = ["John Baber <cargo@frundle.com>"]
license = "GPL-3.0"
description = "Core functions for the edhex crate"
homepage = "https://github.com/jbaber/edhex_core"
readme = "README.md"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
regex = "1.4.5"
unicode-segmentation = "1.6.0"
